--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 aiomysql==0.3.2
+alembic==1.17.0
 annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
+contourpy==1.3.2
+cycler==0.12.1
 databases==0.9.0
 dnspython==2.0.0
 email-validator==2.3.0
@@ -11,6 +14,7 @@ exceptiongroup==1.3.0
 fastapi==0.119.0
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.1
+fonttools==4.60.1
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
@@ -18,16 +22,24 @@ httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 Jinja2==3.1.6
+kiwisolver==1.4.9
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+matplotlib==3.10.7
 mdurl==0.1.2
 mysql==0.0.3
 mysqlclient==2.2.7
+numpy==2.2.6
+packaging==25.0
+pillow==12.0.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
 pymongo==3.12.0
 PyMySQL==1.1.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -37,10 +49,12 @@ rich-toolkit==0.15.1
 rignore==0.7.1
 sentry-sdk==2.42.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 sqlmodel==0.0.27
 starlette==0.48.0
+tomli==2.3.0
 typer==0.19.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
